--- a/infra/development/k8s/base/secrets.yaml
+++ b/infra/development/k8s/base/secrets.yaml
@@ -35,3 +35,24 @@ stringData:
   POSTGRES_PASSWORD: "password"
   POSTGRES_HOST: "ride-service-db"
   POSTGRES_PORT: "5432"
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: redis-credentials
+type: Opaque
+stringData:
+  REDIS_HOST: "redis"
+  REDIS_PORT: "6379"
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: user-service-credentials
+type: Opaque
+stringData:
+  JWT_SECRET: "um-secret-mto-dificil"
